--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,7 @@
         attributes and intent filters the same
         -->
         <activity
-            android:name="com.voltage.launcher.CustomLauncher"
+            android:name="com.android.launcher3.VoltageLauncher"
             android:launchMode="singleTask"
             android:clearTaskOnLaunch="true"
             android:stateNotNeeded="true"
